--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>GadgetsGuide</title>
   </head>
 <body>
+  <h1>This website is under development</h1>
 Hello there, awesome person!
   </body>
 </html>
