--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 <body>
   <h1>This website is under development</h1>
 Hello there, awesome person!
+  <img src="C:\Users\Abhishek Dhumvad\Downloads\photo-1504714146340-959ca07e1f38.jpg">
   </body>
 </html>
